--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,13 +1,30 @@
 body {
     background-color: black;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    padding: 6px;
+    align-items: flex-start;
+    gap: 6px;
+    box-sizing: border-box;
 }
 
 /* Div Selectors */
 
 .card {
+    display: flex;
     width: 25vw;
     height: 50vh;
-    background-color: #333333;
+    padding: 32px 40px 48px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    flex-shrink: 0;
+    background: radial-gradient(139.04% 120.69% at 50% 0%, #333 0%, rgba(51, 51, 51, 0.00) 100%), #000;
+    justify-content: flex-end;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 2px solid #101010;
 }
 
 .caption {
@@ -18,19 +35,41 @@ body {
     align-self: stretch;
 }
 
-.label-warning {
+.warning {
     display: flex;
     padding: 8px;
     justify-content: center;
     align-items: center;
     gap: 10px;
     border-radius: 5px;
-    background: #FF8A00;
+    background: hsl(0deg 0% 6.61%);
 }
+
+
 
 /* Text selectors */
 
-.card-h2 {
-    color: white;
-    font-family: "Inter", Arial, sans-serif;
+.card h2 {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%; /* 23.4px */
+}
+
+.warning p {
+    color: #4a4a4a;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+/* Знаки */
+
+.sign {
+    width: 16px;
+    height: 16px;
 }
