--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,10 +4,40 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns:
+        repeat(auto-fit, minmax(200px, 1fr));
+}
+.card:nth-child(odd) {
+    background-color: rgb(16 16 16);
 }
 
 .card {
-    background-color: aliceblue;
-    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: rgb(0, 0, 0);
+    height: 400px;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.card h2 {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: white;
+}
+
+.card p {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: white;
+}
+
+.caption {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 12px;
 }
