--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,8 +5,9 @@ body {
 .container {
     display: grid;
     grid-template-columns:
-        repeat(auto-fit, minmax(200px, 1fr));
+        repeat(auto-fit, minmax(300px, 1fr));
 }
+
 .card:nth-child(odd) {
     background-color: rgb(16 16 16);
 }
@@ -14,18 +15,29 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: rgb(0, 0, 0);
-    height: 400px;
+    height: 450px;
     padding: 40px;
     box-sizing: border-box;
+    align-items: center;
+}
+
+.caption {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 75%;
+    gap: 12px;
 }
 
 .card h2 {
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-weight: 700;
     font-size: 24px;
+    line-height: 1.3;
     color: white;
+    max-width: 75%;
 }
 
 .card p {
@@ -33,11 +45,6 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: white;
+    max-width: 75%;
 }
 
-.caption {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 12px;
-}
