--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,8 +4,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns:
-        repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .card:nth-child(odd) {
@@ -20,14 +19,13 @@ body {
     height: 450px;
     padding: 40px;
     box-sizing: border-box;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .caption {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    max-width: 75%;
     gap: 12px;
 }
 
@@ -37,14 +35,28 @@ body {
     font-size: 24px;
     line-height: 1.3;
     color: white;
-    max-width: 75%;
+
 }
 
 .card p {
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 16px;
+    color: rgba(255, 255, 255, 0.247);
+
+}
+
+p.label-warning {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1;
     color: white;
-    max-width: 75%;
+    border-color: #f20000;
+    border-radius: 50px;
+    border-style: solid;
+    border-width: 1px;
+    padding: 6px 16px;
+    box-sizing: border-box;
 }
 
