--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,19 +23,16 @@ body {
 }
 
 .caption {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 12px;
+    margin: 0 auto;
 }
 
 .card h2 {
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.3;
     color: white;
-
+    margin: 8px auto 0;
 }
 
 .card p {
@@ -43,7 +40,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: rgba(255, 255, 255, 0.247);
-
+    margin: 12px auto 0;
 }
 
 p.label-warning {
@@ -58,6 +55,7 @@ p.label-warning {
     border-width: 1px;
     padding: 6px 16px;
     box-sizing: border-box;
-    margin: 0 auto 0 0;
+    margin: auto;
+    display: inline-block
 }
 
