--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,11 +4,27 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 50px 1fr;
+    height: 100vh;
 }
 
-.card:nth-child(odd) {
-    background-color: rgb(16 16 16);
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    flex-wrap: wrap;
+}
+
+.card:nth-child(2n) {
+    background-color: black;
+}
+
+.card:nth-child(2n+1) {
+    background-color: darkgray;
+}
+
+.menu {
+    display: flex;
+    height: 100%;
 }
 
 .card {
@@ -19,11 +35,16 @@ body {
     height: 450px;
     padding: 40px;
     box-sizing: border-box;
-    align-items: center;
+    align-items: flex-start;
+}
+
+.sign {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .caption {
-    margin: 0 auto;
 }
 
 .card h2 {
@@ -59,3 +80,9 @@ p.label-warning {
     display: inline-block
 }
 
+@media screen and (max-width: 600px) {
+    .container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 50px 1fr;
+    }
+  }
