--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,30 +5,13 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 50px 1fr;
-    height: 100vh;
-}
-
-.menu.horizontal {
-    grid-template-rows: none;
-    grid-template-columns: 1fr 1fr;
-    box-sizing: border-box;
-}
-
-.menu.vertical {
-    grid-template-columns: none;
-    grid-template-rows: 1fr 1fr;
-}
-
-.ic-menu {
-    margin: 10px 10px auto;
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    overflow-y: auto;
 }
 
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
-    flex-wrap: wrap;
-    grid-gap: 0;
 }
 
 .card:nth-child(2n) {
@@ -77,26 +60,78 @@ body {
     margin: 12px auto 0;
 }
 
-p.label-warning {
+.label-warning {
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 12px;
     line-height: 1;
     color: white;
-    border-color: #f20000;
     border-radius: 50px;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid #f20000;
     padding: 6px 16px;
     box-sizing: border-box;
     margin: auto;
-    display: inline-block
+    display: inline-block;
 }
 
-@media (max-width: 768px) { /* adjust 768px to the breakpoint you want */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+.popup-content {
+    background-color: #0f0f0f;
+    padding: 48px;
+    width: calc(100vw - 32px);
+    text-align: center;
+    border-radius: 10px;
+    box-sizing: border-box;
+    text-align: left;
+    overflow-y: scroll;
+    z-index: 9999;
+}
+
+.sign-popup {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto 48px;
+}
+
+.popup-content p, li {
+    color: white;
+    font: 16px/1.4 'Inter', Arial, Helvetica, sans-serif;
+}
+
+.popup-content ul {
+    list-style-type: upper-alpha;
+}
+
+.popup-content li {
+    margin: 0;
+}
+
+.popup-content h3 {
+    font: 700 20px/1.4 'Inter', Arial, Helvetica, sans-serif;
+    color: white;
+    margin: 24px auto 12px;
+}
+
+.card h2 {
+    cursor: pointer;
+    /* Add other styles for the h2 element */
+}
+
+@media screen and (max-width: 768px) {
     .container {
-        grid-template-columns: none;
-        grid-template-rows: auto auto;
-        height: auto;
+        grid-template-columns: 1fr;
     }
 }
